Alteração sobre o banco de dados na classe de propriedades.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=camiseteria
 server.port=1020
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/camiseteria
-spring.datasource.username=heymarialuiza
-spring.datasource.password=pass
+spring.datasource.username=postgres
+spring.datasource.password=Avemaria10!
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
