--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=camiseteria
-server.port=1020
+server.port=5432
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/camiseteria
-spring.datasource.username=postgres
-spring.datasource.password=Avemaria10!
+spring.datasource.username=malu
+spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
