--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -1,3 +1,12 @@
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
 HELP.md
 .gradle
 build/
@@ -5,15 +14,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 !**/src/main/resources
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
 ### STS ###
 .apt_generated
